updated writing samples

--- a/writing.html
+++ b/writing.html
@@ -204,7 +204,7 @@
             <div class="card-spacing"></div>
 
             <!-- begin paper descriptions -->
-            <div id="visions-of-the-west" class="card-wrapper d-flex justify-content-center">
+            <div id="visions-of-the-roaring-twenties" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">"The Tortured Gatsbys Department" or "The Rise and Fall of Jay Gatsby and
@@ -221,6 +221,32 @@
                             <br><br>
                             This paper is associated with <i>HIST356: Emergence of Modern America</i> at
                             the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="running-away-from-the-future" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"Running Away from the Future"<span style="float: right;">(Dec
+                                2023)</span></h5>
+                        <p class="card-text">This exploring the legal, societal, and geographical landscapes of colonial
+                            Virginia and Maryland, this paper effectively shows the ways in which each of these factors
+                            were considered by indentured servants and enslaved people when attempting to run away.
+                            Through the use of numerous primary sources - court documents, letters, legislation, and
+                            numerous others - the paper acknowledges as many aspects of contemporary society as
+                            possible. By incorporating the increasing tensions between the two colonies and local Native
+                            Americans, along with the increasing racialization and severity of laws regarding runaways,
+                            the paper makes a nuanced effort to portray the very real dangers seen by those who
+                            attempted to run away, while also showing why they believed it was necessary to do so.
+                            <br><br>
+                            This paper is associated with <a href="https://enslaved.org/">Enslaved.org</a>'s <a
+                                href="https://jsdp.enslaved.org/"><i>Journal of Slavery and Data Preservation</i></a> as
+                            part of <i>HIST386: Experiential Learning</i> at the University of Maryland.
                         </p>
                         <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
