updated coding projects

--- a/coding.html
+++ b/coding.html
@@ -246,7 +246,105 @@
 
             <div class="card-spacing"></div>
 
-            <div id="comet--num-auto" class="card-wrapper d-flex justify-content-center">
+            <div id="trashy-trends-nyc" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">New York, New York: Trashy Trends in the City that Never Sleeps,
+                            2005-2023 (Python)<span style="float: right;">(May 2024)</span>
+                        </h5>
+                        <p class="card-text">This project serves as the final project for CMSC320. It effectively
+                            encompasses everything that has been discussed in
+                            class over the semester. Firstly, the project starts with a motivation section, describing
+                            the importance of the
+                            project, general background on the topic, and including both serious and humorous parts. The
+                            project goes on to discuss
+                            and perform data cleaning, data processing, and data visualization. It later uses linear
+                            regression and gradient descent
+                            to create predictive models, determining their accuracy based on the limited input data that
+                            is available, while also
+                            discussing the pros and cons of each model. The project ends by discussing how this and
+                            similar projects are important
+                            and will only become more important, while at the same time discussing topics such as data
+                            ethics and insights into
+                            policy decisions.
+                            <br><br>
+                            This project is associated with <i>CMSC320: Introduction to Data Science</i> at the
+                            University of Maryland.
+                        </p>
+                        <a href="https://www.psmit.dev/cmsc320-final-tutorial.html"
+                            class="btn btn-primary card-link">Public Tutorial</a>
+                        <a href="https://github.com/psmit703/cmsc320-final-tutorial"
+                            class="btn btn-primary card-link">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="minidafny-z3" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">MiniDafny - Z3 Integration & Evaluator (Haskell, Dafny, Z3)<span
+                                style="float: right;">(Apr 2024 - May 2024)</span>
+                        </h5>
+                        <p class="card-text">Implemented Z3 integration for MiniDafny, a subset of Dafny as defined by
+                            course faculty. This project serves as the
+                            final project for CMSC433 and the culmination of the previous three MiniDafny projects
+                            (pretty printing, parsing, and
+                            verification conditions). It primarily extends the previous verification conditions project,
+                            adapting it to support Z3's
+                            SMT-LIB2 syntax. While generally requiring direct translations, this also involved
+                            implementing logical equivalencies
+                            for various operators due to limitations in translating between the two languages. This
+                            project allows for MiniDafny to
+                            code to be verified in a similar manner to Dafny itself, effectively guaranteeing an absence
+                            of runtime errors in
+                            verified programs.
+                            <br><br>
+                            The project also implements an evaluator, effectively allowing programs to be verified in a
+                            fully-automated manner without requiring a user to manually call the Z3 integration, and
+                            then evaluating them for their results.
+                            <br><br>
+                            This project is associated with <i>CMSC433: Programming Language Technologies and
+                                Paradigms</i> at the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="stock-value-predictions" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Stock Value Predictions (Python)<span style="float: right;">(Apr
+                                2024)</span>
+                        </h5>
+                        <p class="card-text">This project uses Alpha Vantage's stock API to get its input data, where it
+                            gets various data related to IBM's historical stock prices. The project simulates an IBM job
+                            interview, where applicants have to predict and generate insights regarding IBM's stock.
+                            After getting the relevant data, the project first visualizes various aspects of it,
+                            helping to both determine insights can be made and what predictions may be helpful. To model
+                            the data in an attempt to predict it, the project creates a linear regression model based
+                            off a "training" subset of the input data, which is tested on a separate subset of the input
+                            data to determine its accuracy. A second model using ridge regression is also
+                            created, which gives an opportunity to directly compare the two models and their various
+                            pros and cons.
+                            <br><br>
+                            This project is associated with <i>CMSC320: Introduction to Data Science</i> at the
+                            University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="comet-obs" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Comet Observations (Python, SQL)<span style="float: right;">(Apr 2024
@@ -363,7 +461,7 @@
 
             <div class="card-spacing"></div>
 
-            <div id="comet--num-auto" class="card-wrapper d-flex justify-content-center">
+            <div id="comet-num-auto" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Comet Numbering Automation (Python)<span style="float: right;">(Jan 2024
