removed .html extensions in hyperlinks
github pages *should* auto-redirect or whatever, looks better for the user

--- a/sitemap.html
+++ b/sitemap.html
@@ -24,7 +24,7 @@
     <meta name="author" content="Pete Smith">
 
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.psmit.dev/sitemap.html">
+    <link rel="canonical" href="https://www.psmit.dev/sitemap">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -93,18 +93,18 @@
                         <a class="nav-link nav-home-custom text-center" href="/" itemprop="url">Home</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-resume-custom text-center" href="/resume.html" itemprop="url">Résumé</a>
+                        <a class="nav-link nav-resume-custom text-center" href="/resume" itemprop="url">Résumé</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-publications-custom text-center" href="/publications.html"
+                        <a class="nav-link nav-publications-custom text-center" href="/publications"
                             itemprop="url">Publications</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-coding-custom text-center" href="/coding.html" itemprop="url">Coding
+                        <a class="nav-link nav-coding-custom text-center" href="/coding" itemprop="url">Coding
                             Projects</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-writing-custom text-center" href="/writing.html" itemprop="url">Writing
+                        <a class="nav-link nav-writing-custom text-center" href="/writing" itemprop="url">Writing
                             Samples</a>
                     </li>
                 </ul>
@@ -128,10 +128,10 @@
 
                     <ul style="list-style-type: none; padding: 0px;">
                         <li><a href=" /">Home Page</a></li>
-                        <li><a href="/resume.html">Résumé</a></li>
-                        <li><a href="/publications.html">Publications</a></li>
-                        <li><a href="/coding.html">Coding Projects</a></li>
-                        <li><a href="/writing.html">Writing Samples</a></li>
+                        <li><a href="/resume">Résumé</a></li>
+                        <li><a href="/publications">Publications</a></li>
+                        <li><a href="/coding">Coding Projects</a></li>
+                        <li><a href="/writing">Writing Samples</a></li>
                     </ul>
 
                     <div class="sitemap-spacing"></div>
@@ -145,10 +145,10 @@
 
 
                     <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /changelog.html">Recent Changelog</a></li>
-                        <li><a href="/sitemap.html">Text Sitemap (This Page)</a></li>
+                        <li><a href=" /changelog">Recent Changelog</a></li>
+                        <li><a href="/sitemap">Text Sitemap (This Page)</a></li>
                         <li><a href="https://github.com/psmit703/personal-website">GitHub Repo (External)</a></li>
-                        <li><a href=" /privacy.html">Privacy Notice</a></li>
+                        <li><a href=" /privacy">Privacy Notice</a></li>
                     </ul>
 
                     <div class="sitemap-spacing"></div>
@@ -162,8 +162,8 @@
 
 
                     <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href="/404.html">Error 404 Page</a></li>
-                        <li><a href="/template.html">Template Page</a></li>
+                        <li><a href="/404">Error 404 Page</a></li>
+                        <li><a href="/template">Template Page</a></li>
                         <li><a href="/sitemap.xml">XML Sitemap</a></li>
                     </ul>
 
@@ -190,10 +190,9 @@
             <!-- footer -->
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2024 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="/changelog.html">Changelog</a> | <a
-                        href="https://github.com/psmit703/personal-website">GitHub
+                <p><a href="/changelog">Changelog</a> | <a href="https://github.com/psmit703/personal-website">GitHub
                         Repository</a></p>
-                <p><a href="#">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
+                <p><a href="#">Sitemap</a> | <a href="/privacy">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
