--- a/template.html
+++ b/template.html
@@ -93,18 +93,18 @@
                         <a class="nav-link nav-home-custom text-center" href="/" itemprop="url">Home</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-resume-custom text-center" href="/resume.html" itemprop="url">Résumé</a>
+                        <a class="nav-link nav-resume-custom text-center" href="/resume" itemprop="url">Résumé</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-publications-custom text-center" href="/publications.html"
+                        <a class="nav-link nav-publications-custom text-center" href="/publications"
                             itemprop="url">Publications</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-coding-custom text-center" href="/coding.html" itemprop="url">Coding
+                        <a class="nav-link nav-coding-custom text-center" href="/coding" itemprop="url">Coding
                             Projects</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
-                        <a class="nav-link nav-writing-custom text-center" href="/writing.html" itemprop="url">Writing
+                        <a class="nav-link nav-writing-custom text-center" href="/writing" itemprop="url">Writing
                             Samples</a>
                     </li>
                 </ul>
@@ -121,10 +121,9 @@
             <!-- footer -->
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2024 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="/changelog.html">Changelog</a> | <a
-                        href="https://github.com/psmit703/personal-website">GitHub
+                <p><a href="/changelog">Changelog</a> | <a href="https://github.com/psmit703/personal-website">GitHub
                         Repository</a></p>
-                <p><a href="/sitemap.html">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
+                <p><a href="/sitemap">Sitemap</a> | <a href="/privacy">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
