removed structured data
why did I bother adding it to begin with lmao

--- a/coding.html
+++ b/coding.html
@@ -56,89 +56,6 @@
 
     <!-- Clicky Website Analytics script -->
     <script async data-id="101425859" src="//static.getclicky.com/js"></script>
-
-    <!-- structured data -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org/",
-            "@type": "WebPage",
-            "name": "Coding Projects",
-            "abstract": "My coding projects! Descriptions are given for each. Where possible, links to the code are provided",
-            "copyrightHolder": {
-                        "@context": "https://schema.org/",
-                        "@type": "Person",
-                        "name": "Pete Smith",
-                        "additionalName": "Peter Smith",
-                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
-                        "jobTitle": ["Web Development Intern", "History Intern"],
-                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
-                        "telephone": "(443) 254-2441",
-                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
-                        "workLocation": {
-                                            "@context": "https://schema.org/",
-                                            "@type": "Place",
-                                            "address": {
-                                                            "@context": "https://schema.org/",
-                                                            "@type": "PostalAddress",
-                                                            "addressLocality": "Washington",
-                                                            "addressRegion": "District of Columbia",
-                                                            "addressCountry": "USA"
-                                                        }
-                        },
-                        "knowsLanguage": ["en", "en-US"]
-                     },
-            "copyrightNotice": "© 2024 Pete Smith",
-            "copyrightYear": "2024",
-            "creator": {
-                        "@context": "https://schema.org/",
-                        "@type": "Person",
-                        "name": "Pete Smith",
-                        "additionalName": "Peter Smith",
-                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
-                        "jobTitle": ["Web Development Intern", "History Intern"],
-                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
-                        "telephone": "(443) 254-2441",
-                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
-                        "workLocation": {
-                                            "@context": "https://schema.org/",
-                                            "@type": "Place",
-                                            "address": {
-                                                            "@context": "https://schema.org/",
-                                                            "@type": "PostalAddress",
-                                                            "addressLocality": "Washington",
-                                                            "addressRegion": "District of Columbia",
-                                                            "addressCountry": "USA"
-                                                        }
-                        },
-                        "knowsLanguage": ["en", "en-US"]
-                     },
-            "author": {
-                        "@context": "https://schema.org/",
-                        "@type": "Person",
-                        "name": "Pete Smith",
-                        "additionalName": "Peter Smith",
-                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
-                        "jobTitle": ["Web Development Intern", "History Intern"],
-                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
-                        "telephone": "(443) 254-2441",
-                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
-                        "workLocation": {
-                                            "@context": "https://schema.org/",
-                                            "@type": "Place",
-                                            "address": {
-                                                            "@context": "https://schema.org/",
-                                                            "@type": "PostalAddress",
-                                                            "addressLocality": "Washington",
-                                                            "addressRegion": "District of Columbia",
-                                                            "addressCountry": "USA"
-                                                        }
-                        },
-                        "knowsLanguage": ["en", "en-US"]
-                     },
-            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-            "relatedLink": "https://github.com/psmit703"
-        }
-    </script>
 </head>
 
 <body>
@@ -687,12 +604,11 @@
                         </h5>
                         <p class="card-text">My personal website! Yay! This is a static site hosted by GitHub Pages. In
                             addition to the standard HTML, CSS, and JavaScript, it makes use of Bootstrap along with
-                            custom CSS for stylization and JavaScript for various functionalities such as displaying a
-                            random image on the home page, toggleable dark mode, and navigation bar animations. The site
-                            uses structured data (Schema.org / JSON-LD) to better interact with search engines and
-                            incorporates Plausible Analytics and Clicky Website Analytics, which are both
-                            privacy-friendly alternatives to Google Analytics, to track viewing statistics. It also
-                            makes use of GitHub's REST API to display a recent changelog on the site itself.</p>
+                            custom CSS for stylization and custom JavaScript for various functionalities such as
+                            displaying a random image on the home page, toggleable dark mode, and navigation bar
+                            animations. The site incorporates Plausible Analytics and Clicky Website Analytics, which
+                            are both privacy-friendly alternatives to Google Analytics, to track viewing statistics. It
+                            also makes use of GitHub's REST API to display a recent changelog on the site itself.</p>
                         <a href="https://github.com/psmit703/personal-website" class="btn btn-primary card-link">GitHub
                             Repo</a>
                     </div>
