added, moved some links in coding.html

--- a/coding.html
+++ b/coding.html
@@ -416,6 +416,8 @@
                             This project is associated with the NASA Planetary Data System Small Bodies Node at the
                             University of Maryland.
                         </p>
+                        <a href="https://pds-smallbodies.astro.umd.edu/data_sb/resources/periodic_comets.shtml"
+                            class="btn btn-primary card-link">Periodic Comet Names List</a>
                         <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
                             unavailable)</a>
                     </div>
@@ -669,10 +671,11 @@
                         </p>
                         <a href="https://sbnmpc.astro.umd.edu/cometInfo/" class="btn btn-primary card-link">Site
                             Link</a>
-                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
-                            unavailable)</a>
                         <a href="/publications#comet-statistics" class="btn btn-primary card-link">Associated
                             conference paper</a>
+                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
+                            unavailable)</a>
+
                     </div>
                 </div>
             </div>
