added a now page :)
adjusted navbar to Bootstrap's lg (large) because there is now another item in it that goes off of the screen otherwise on certain displays. Adjusted relevant values in js files as they are supposed to match the pixel width for changing div sizes

--- a/changelog.html
+++ b/changelog.html
@@ -73,7 +73,7 @@
     </div>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">Pete Smith
             </a>
@@ -89,6 +89,9 @@
                 <ul class="navbar-nav ml-auto" itemscope itemtype="https://schema.org/SiteNavigationElement">
                     <li class="nav-item mx-2" itemprop="name">
                         <a class="nav-link nav-home-custom text-center" href="/" itemprop="url">Home</a>
+                    </li>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-now-custom text-center" href="/now" itemprop="url">Now</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
                         <a class="nav-link nav-resume-custom text-center" href="/resume" itemprop="url">Résumé</a>
