--- a/sitemap.html
+++ b/sitemap.html
@@ -70,7 +70,7 @@
     </div>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">Pete Smith
             </a>
@@ -86,6 +86,9 @@
                 <ul class="navbar-nav ml-auto" itemscope itemtype="https://schema.org/SiteNavigationElement">
                     <li class="nav-item mx-2" itemprop="name">
                         <a class="nav-link nav-home-custom text-center" href="/" itemprop="url">Home</a>
+                    </li>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-now-custom text-center" href="/now" itemprop="url">Now</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
                         <a class="nav-link nav-resume-custom text-center" href="/resume" itemprop="url">Résumé</a>
@@ -122,7 +125,8 @@
                     <div class="sitemap-spacing"></div>
 
                     <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /">Home Page</a></li>
+                        <li><a href="/">Home Page</a></li>
+                        <li><a href="/now">Now Page</li>
                         <li><a href="/resume">Résumé</a></li>
                         <li><a href="/publications">Publications</a></li>
                         <li><a href="/coding">Coding Projects</a></li>
@@ -140,10 +144,10 @@
 
 
                     <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /changelog">Recent Changelog</a></li>
+                        <li><a href="/changelog">Recent Changelog</a></li>
                         <li><a href="/sitemap">Text Sitemap (This Page)</a></li>
                         <li><a href="https://github.com/psmit703/personal-website">GitHub Repo (External)</a></li>
-                        <li><a href=" /privacy">Privacy Notice</a></li>
+                        <li><a href="/privacy">Privacy Notice</a></li>
                     </ul>
 
                     <div class="sitemap-spacing"></div>
@@ -165,6 +169,21 @@
                     <div class="sitemap-spacing"></div>
 
                 </div>
+                <div class="col-sm">
+                    <!-- utility sitemap section -->
+                    <h4>Other Pages</h4>
+
+                    <div class="sitemap-spacing"></div>
+
+
+                    <ul style="list-style-type: none; padding: 0px;">
+                        <li><a href="/cmsc320-final-tutorial.html">CMSC320 Final Tutorial</a></li>
+                    </ul>
+
+                    <div class="sitemap-spacing"></div>
+
+                </div>
+
             </div>
 
             <hr />
@@ -179,6 +198,10 @@
             <h5 class="text-center"><i>Pages listed under "Utility Pages" have no direct links to them on this site
                     (apart from through this page) and are used as utilities for user experience and site
                     development</i></h5>
+
+            <h5 class="text-center"><i>Pages listed under "Other Pages" have no direct links to them on this site
+                    (apart from through this page) and do not fit in the same category as pages used as site
+                    utilities</i></h5>
 
             <hr />
 
