--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">Pete Smith
             </a>
@@ -91,6 +91,9 @@
                     <li class="nav-item mx-2 active active-custom" itemprop="name">
                         <a class="nav-link nav-home-custom text-center" href="#" itemprop="url">Home<span
                                 class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item mx-2" itemprop="name">
+                        <a class="nav-link nav-now-custom text-center" href="/now" itemprop="url">Now</a>
                     </li>
                     <li class="nav-item mx-2" itemprop="name">
                         <a class="nav-link nav-resume-custom text-center" href="/resume" itemprop="url">Résumé</a>
