updated a paper title in writing.html to reflect the full title

--- a/writing.html
+++ b/writing.html
@@ -153,8 +153,9 @@
             <div id="running-away-from-the-future" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">"Running Away from the Future"<span style="float: right;">(Dec
-                                2023)</span></h5>
+                        <h5 class="card-title">"Running Away from the Future: Resistance Against Increasingly Cruel and
+                            Racialized Forms of Unfree Labor in Seventeenth-Century Virginia and Maryland"<span
+                                style="float: right;">(Dec 2023)</span></h5>
                         <p class="card-text">This exploring the legal, societal, and geographical landscapes of colonial
                             Virginia and Maryland, this paper effectively shows the ways in which each of these factors
                             were considered by indentured servants and enslaved people when attempting to run away.
